# text2SQL

./: .env  .gitignore  .gitmodules  Dockerfile  EDA (Aman).ipynb  Makefile  README.md  cloudbuild.yaml  cosql_eda.ipynb  eda_zicheng.ipynb  pyproject.toml  requirements.txt  t5_fine_tuning_cosql.ipynb  t5_fine_tuning_wikisql.ipynb  t5_wikisql_fine_tuning_cosql.ipynb
archive/: README.md  evaluation.py  process_sql.py
archive/model/: t5_fine_tuning_spider.ipynb
configs/: openai_api_key.json
eda/: README.md  cosql_jingru.ipynb  spider_aman.ipynb  spider_zicheng.ipynb
evaluation/: codex_evaluation.ipynb  evaluation.py  evaluation_for_testing.ipynb  evaluation_for_training.ipynb  exact_set_matching_accuracy.ipynb  exec_eval.py  gold_final.txt
evaluation/configs/: openai_api_key.json
evaluation/predictions/: codex_final.txt  t5_wikisql_cosql_final.txt
evaluation/summary/: text_davinci_003_spider.txt
model/: README.md  t5_cosql.py  t5_spider.py  t5_spider_cosql.py  t5_wikisql.py  t5_wikisql_cosql.py  utils_t5_finetune.py
reports/: conference_101719.tex
