[tool.poetry]
name = "s23-cudsi-loreal-text2sql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "s23_cudsi_loreal_text2sql"}]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.8.1"
transformers = "^4.27.4"
plotly = "^5.14.0"
matplotlib = "^3.7.1"
pandas = "^2.0.0"
wordcloud = "^1.8.2.2"
ipykernel = "^6.22.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
