[tool.poetry]
name = "s23-cudsi-loreal-text2sql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.8.1"
torch = "^1.13.0"
torchvision = "^0.14.0"
seaborn = "^0.12.2"
plotly = "^5.14.1"
openai = "^0.27.4"
transformers = "^4.27.4"
wordcloud = "^1.8.2.2"
ipykernel = "^4.10.0"
pandas = "^1.0.3"
matplotlib = "^3.3.3"
datasets = "^2.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
